--- a/docs/CSS/settingsforallpages.css
+++ b/docs/CSS/settingsforallpages.css
@@ -46,5 +46,7 @@ body {
     color: var(--PaletaCor03);
 }
 
-
+img, h1, h2, h3, h4, h5, h6, svg, path, defs, div{
+    user-select: none;
+}
 /*------------------------ General settings ------------------------*/
